--- a/Echo/Views/VideoControlView.xaml
+++ b/Echo/Views/VideoControlView.xaml
@@ -8,6 +8,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Echo.ViewModels"
              Height="60"
+             MouseMove="OnMouseMove"
              >
     <!--datacontext-->
 
