--- a/Echo/MainWindow.xaml
+++ b/Echo/MainWindow.xaml
@@ -27,6 +27,8 @@
     </Window.DataContext>
 
     <Window.Resources>
+        <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
+        
         <!-- 通用按钮样式 -->
         <Style x:Key="ControlButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="#FF2D2D2D"/>
@@ -171,8 +173,8 @@
                                          TextAlignment="Center"
                                          MaxWidth="800"
                                          VerticalAlignment="Bottom"
-                                         Margin="0,0,0,10"     >
-
+                                         Margin="0,0,0,10" 
+                                         Visibility="{Binding SubtitleText, Converter={StaticResource StringToVisibilityConverter}}">>
                             </TextBlock>
 
                             <!-- Next subtitle -->
